# gubbins

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  ChangeLog  Dockerfile  GubbinsManual_latest.docx  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  Newickform.c  Newickform.h  README  README.md  alignment_file.c  alignment_file.h  azure-pipelines.yml  block_tab_file.c  block_tab_file.h  branch_sequences.c  branch_sequences.h  codecov.yml  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  environment.yml  fasta_of_snp_sites.c  fasta_of_snp_sites.h  fastml.rb  fastml2.rb  gff_file.c  gubbins  gubbins.c  (+31 more)
python/: Makefile.am  non_bi_tree.tre.expected  run_gubbins.py  setup.py
python/gubbins/: Fastml.py  PreProcessFasta.py  RAxMLExecutable.py  RAxMLSequenceReconstruction.py  ValidateFastaAlignment.py  __init__.py  common.py  fastml.py  pyjar.py  run_gubbins.py  treebuilders.py  utils.py
python/gubbins/__pycache__/: pyjar.calculate_root_likelihood-273.py39.1.nbc  pyjar.calculate_root_likelihood-273.py39.nbi  pyjar.count_node_snps-309.py39.1.nbc  pyjar.count_node_snps-309.py39.nbi  pyjar.fill_out_aln-358.py39.1.nbc  pyjar.fill_out_aln-358.py39.nbi  pyjar.find_most_likely_base_given_descendents-251.py39.1.nbc  pyjar.find_most_likely_base_given_descendents-251.py39.nbi  pyjar.get_columns-374.py39.1.nbc  pyjar.get_columns-374.py39.nbi  pyjar.iterate_over_base_patterns-387.py39.1.nbc  pyjar.iterate_over_base_patterns-387.py39.nbi  pyjar.process_leaf-291.py39.1.nbc  pyjar.process_leaf-291.py39.nbi  pyjar.reconstruct_alleles-326.py39.1.nbc  pyjar.reconstruct_alleles-326.py39.nbi  pyjar.seq_to_int-229.py39.1.nbc  pyjar.seq_to_int-229.py39.nbi
python/gubbins/tests/: mislabelled.starting_tree.tre  test_alignment_python_methods.py  test_common.py  test_converging_recombinations.py  test_dependencies.py  test_external_dependancies.py  test_fastml.py  test_pre_process_fasta.py  test_python_scripts.py  test_raxml_sequence_reconstruction.py  test_string_construction.py  test_tree_methods.py  test_tree_python_methods.py  test_treebuilders.py  test_utils.py  test_validate_fasta_input.py  test_validate_starting_tree.py
python/gubbins/tests/data/: alignment_with_3_sequences.aln  alignment_with_no_variation.aln  alignment_with_too_much_missing_data.aln  alignment_with_too_much_missing_data.aln.expected  all_unique_sequence_names.fa  bootstrapping_test.aln  clade_to_extract.txt  concatenate_fasta_files.aln.expected  corrected_alignment.aln  corrected_alignment.csv  destination_tree.tre  duplicate_names_in_tree.tre  expected_RAxML_result.multiple_recombinations.iteration_5  expected_RAxML_result.multiple_recombinations.iteration_5.branch_snps.tab  expected_RAxML_result.multiple_recombinations.iteration_5.gff  expected_RAxML_result.multiple_recombinations.iteration_5.output_tree  expected_RAxML_result.multiple_recombinations.iteration_5.phylip  expected_RAxML_result.multiple_recombinations.iteration_5.snp_sites.aln  expected_RAxML_result.multiple_recombinations.iteration_5.stats  expected_RAxML_result.multiple_recombinations.iteration_5.tab  expected_RAxML_result.multiple_recombinations.iteration_5.vcf  expected_final_tree_without_internal_labels.tre  expected_multiple_recombinations.aln.start  expected_renamed_output_tree  expected_reroot_tree_with_outgroups_all_in_one_clade.tre  expected_reroot_tree_with_outgroups_with_two_mixed_clades.tre  expected_test_reroot_tree_with_outgroups_all_in_one_clade_large.tre  final_tree_with_internal_labels.tre  further_alignment.aln  gaps_to_be_reinserted.aln  gaps_to_be_reinserted.aln.expected  gaps_to_be_reinserted.vcf  input_pairwise.aln.phylip  invalid_alignment.aln  invalid_newick_tree.tre  iqtree_ancestral.fasta.expected  iqtree_ancestral.state  masking_multiple.aln  mislabelled.multiple_recombinations.aln  multiple_recombinations.aln  (+55 more)
python/gubbins/tests/data/preprocessfasta/: all_same_sequence.aln  expected_missing_data.aln  expected_multiple_duplicates.aln  expected_one_duplicate.aln  fasta_list_creator.sh  missing_data.aln  multiple_duplicates.aln  no_duplicates.aln  one_duplicate.aln  sequence_t1.fasta  sequence_t1_1.fastq  sequence_t1_2.fastq  sequence_t2.fasta  sequence_t2_1.fastq  sequence_t2_2.fastq  sequence_t3.fasta  sequence_t3_1.fastq  sequence_t3_2.fastq  sequence_t4.fasta  sequence_t4_1.fastq  sequence_t4_2.fastq  sequence_t5.fasta  sequence_t6.fasta  ska_fasta_list.txt
python/gubbins/tests/data/raxml_sequence_reconstruction/: 1.fasta  2.fasta  expected_ancestor_sequence_from_raxml  expected_combined_1_2.fasta  expected_marginalAncestralStates.fasta  expected_rooted_tree.newick  (+2 more)
python/script/: gubbins_drawer.py  run_gubbins.py
python/scripts/: alignment_checker.py  analyse_gubbins_subset.py  count_recombinations_per_gene.py  extract_clade.py  extract_gubbins_clade.py  extract_gubbins_clade_statistics.py  extract_recombinant_sequences.py  generate_files_for_clade_analysis.py  generate_ska_alignment.py  gubbins_alignment_checker.py  gubbins_drawer.py  mask_gubbins_aln.py  run_gubbins.py  treeWAS_run.R
release/: Makefile.am  Vagrantfile
release/manifests/: saucyvm.pp  trustyvm.pp
src/: Makefile  Makefile.am  Makefile.in  Newickform.c  Newickform.h  PyGubbins.cpp  alignment_file.c  alignment_file.h  block_tab_file.c  block_tab_file.h  branch_sequences.c  branch_sequences.h  csv_of_snp_sites.c  csv_of_snp_sites.h  fasta_of_snp_sites.c  fasta_of_snp_sites.h  gff_file.c  gff_file.h  gubbins.c  gubbins.h  kseq.h  main.c  parse_phylip.c  parse_phylip.h  parse_vcf.c  parse_vcf.h  phylib_of_snp_sites.c  phylip_of_snp_sites.c  phylip_of_snp_sites.h  seqUtil.c  seqUtil.h  snp_searching.c  snp_searching.h  snp_sites.c  snp_sites.h  string_cat.c  tree_scaling.c  tree_scaling.h  tree_statistics.c  tree_statistics.h  (+2 more)
src/.deps/: Newickform.Po  alignment_file.Po  block_tab_file.Po  branch_sequences.Po  fasta_of_snp_sites.Po  gff_file.Po  gubbins.Po  main.Po  parse_phylip.Po  parse_vcf.Po  phylib_of_snp_sites.Po  seqUtil.Po  snp_searching.Po  snp_sites.Po  tree_statistics.Po  vcf.Po
(+139 files in other folders)
